# template-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
scripts/: check.sh  setup.sh  start.sh  test.sh
src/: app.py  settings.py
src/utils/: logging.py
tests/: test_main.py
